--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bulletin-board",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://sreepurnajasti.github.io/stickynotes",
-  "devDependencies":{
-    "gh-pages":"^1.0.0"
+  "homepage": "https://sreepurnajasti.github.io/bulletin-board",
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   },
   "dependencies": {
     "react": "^16.3.2",
